--- a/src/app/components/DialogDeleteConfim/DialogDeleteConfim.scss
+++ b/src/app/components/DialogDeleteConfim/DialogDeleteConfim.scss
@@ -1,12 +1,12 @@
 .delete-confim-children {
-  font-family: "NotoSans-Regular";
+  font-family: "Product-Sans-Regular";
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 3% 5%;
   .delete-confim-title {
-    font-family: "NotoSans-Bold";
+    font-family: "Product-Sans-Bold";
     font-size: 18px;
     margin-top: 10px;
     margin-bottom: 5px;
