--- a/src/app/components/CustomMenu/CustomMenu.scss
+++ b/src/app/components/CustomMenu/CustomMenu.scss
@@ -14,7 +14,10 @@
   }
 }
 
-
+.logo-tshare{
+  width: 100px;
+  height: 100%;
+}
 .main-menu {
   .main-menu__icon, .main-menu__icon + span {
     margin: 0;
