--- a/src/app/containers/TrangChu/TrangChu.scss
+++ b/src/app/containers/TrangChu/TrangChu.scss
@@ -1,3 +1,18 @@
 .homepage {
   height: calc(100vh - 122px);
 }
+.trang-chu-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  h1{
+    
+    color: red;
+  }
+  img{
+    width: 30%;
+    height: 30%;
+  }
+}
