--- a/src/app/containers/ChuyenMuc/ChuyenMuc.scss
+++ b/src/app/containers/ChuyenMuc/ChuyenMuc.scss
@@ -1,6 +1,56 @@
-.chuyenmuc-container{
+.chuyen-muc-container {
   gap: 30px;
-  .file-item{
-    background-color: #DFE3E6;
+
+  .file-item {
+    background: #fff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 24px;
+    border-radius: 16px;
+    gap: 8px;
+    box-shadow: 0px 4px 10px 0px #0000000D;
+
+    &__right {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+    }
+
+    &__fileName {
+      color: #172B4D;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-align: justify;
+      height: 38px;
+    }
+
+    &__time {
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 17.5px;
+      color: #6486A1;
+    }
+  }
+
+  .no-data {
+    width: 100%;
+    height: 100%;
+  }
+
+  .file-item-map {
+    gap: 24px;
+    padding: 16px;
+    z-index: 1;
+
+
   }
 }
