--- a/src/app/containers/ChuyenMuc/ChuyenMuc.scss
+++ b/src/app/containers/ChuyenMuc/ChuyenMuc.scss
@@ -1,6 +1,8 @@
 .chuyen-muc-container {
   gap: 30px;
-
+  .btn-upload-file-chuyen-muc{
+    margin: 10px 0 0 24px;
+  }
   .file-item {
     background: #fff;
     display: flex;
