Update delete, download, rename

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -628,3 +628,9 @@ $radioColorsHover: (
 .grid {
   display: grid;
 }
+.btn-xoa{
+  background-color: #ffefef !important;
+  color: red !important;
+  border: 0 !important;
+  padding: 0 17px !important;
+}
