--- a/src/app/components/CustomMenu/CustomMenu.scss
+++ b/src/app/components/CustomMenu/CustomMenu.scss
@@ -15,8 +15,9 @@
 }
 
 .logo-tshare{
-  width: 100px;
-  height: 100%;
+  width: 150px;
+  height: 80px;
+  margin-top: -20px;
 }
 .main-menu {
   .main-menu__icon, .main-menu__icon + span {
