--- a/src/app/containers/InfoGroup/InfoGroup.scss
+++ b/src/app/containers/InfoGroup/InfoGroup.scss
@@ -1,6 +1,15 @@
 .info-group-container {
   margin: 24px 16px 0px 16px !important;
-
+  .video-tt{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .post-group-header{
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+  }
 }
 
 .modal-dangbai {
@@ -40,4 +49,5 @@
       font-weight: bold;
     }
   }
+  
 }
