--- a/src/app/containers/InfoGroup/ImageView.scss
+++ b/src/app/containers/InfoGroup/ImageView.scss
@@ -7,7 +7,7 @@
   .image-left-container {
     width: 50%;
     img {
-      height: 500px;
+      height: 100%;
       width: 100%;
     }
   }
@@ -23,7 +23,6 @@
     flex-direction: column;
     gap: 8px;
     width: 50%;
-    height: 500px;
     img{
       width: 100%;
       overflow: hidden;
