--- a/src/app/components/CustomMenu/CustomMenu.scss
+++ b/src/app/components/CustomMenu/CustomMenu.scss
@@ -15,9 +15,9 @@
 }
 
 .logo-SafeDrive{
-  width: 150px;
-  height: 80px;
-  margin-top: -20px;
+  display: none;
+ width: 40px;
+ height: 40px;
 }
 .main-menu {
   .main-menu__icon, .main-menu__icon + span {
